@@ -168,24 +168,24 @@ static int Strtoi(const char *nptr, int base)
     return (int) res;
 }
 
-/* src/main/utils.h */
-extern double R_strtod5(const char *str, char **endptr, char dec, 
+// ../../../main/util.c
+extern double R_strtod5(const char *str, char **endptr, char dec,
 			Rboolean NA, Rboolean exact);
 
 static double
-Strtod (const char *nptr, char **endptr, Rboolean NA, LocalData *d)
+Strtod (const char *nptr, char **endptr, Rboolean NA, LocalData *d, Rboolean exact)
 {
-    return R_strtod5(nptr, endptr, d->decchar, NA, TRUE);
+    return R_strtod5(nptr, endptr, d->decchar, NA, exact);
 }
 
 static Rcomplex
-strtoc(const char *nptr, char **endptr, Rboolean NA, LocalData *d)
+strtoc(const char *nptr, char **endptr, Rboolean NA, LocalData *d, Rboolean exact)
 {
     Rcomplex z;
     double x, y;
     char *s, *endp;
 
-    x = Strtod(nptr, &endp, NA, d);
+    x = Strtod(nptr, &endp, NA, d, exact);
     if (isBlankString(endp)) {
 	z.r = x; z.i = 0;
     } else if (*endp == 'i')  {
@@ -193,7 +193,7 @@ strtoc(const char *nptr, char **endptr, Rboolean NA, LocalData *d)
 	endp++;
     } else {
 	s = endp;
-	y = Strtod(s, &endp, NA, d);
+	y = Strtod(s, &endp, NA, d, exact);
 	if (*endp == 'i') {
 	    z.r = x; z.i = y;
 	    endp++;
@@ -364,9 +364,9 @@ SEXP countfields(SEXP args)
 	    if(!data.con->canread) {
 		data.con->close(data.con);
 		error(_("cannot read from this connection"));
-	    } 
+	    }
 	} else {
-	    if(!data.con->canread) 
+	    if(!data.con->canread)
 		error(_("cannot read from this connection"));
 	}
 	for (i = 0; i < nskip; i++) /* MBCS-safe */
@@ -499,7 +499,8 @@ typedef struct typecvt_possible_types {
  *
  * The typeInfo struct should be initialized with all fields TRUE.
  */
-static void ruleout_types(const char *s, Typecvt_Info *typeInfo, LocalData *data)
+static void ruleout_types(const char *s, Typecvt_Info *typeInfo, LocalData *data,
+			  Rboolean exact)
 {
     int res;
     char *endp;
@@ -522,20 +523,20 @@ static void ruleout_types(const char *s, Typecvt_Info *typeInfo, LocalData *data
     }
 
     if (typeInfo->isreal) {
-	Strtod(s, &endp, TRUE, data);
+	Strtod(s, &endp, TRUE, data, exact);
 	if (!isBlankString(endp))
 	    typeInfo->isreal = FALSE;
     }
 
     if (typeInfo->iscomplex) {
-	strtoc(s, &endp, TRUE, data);
+	strtoc(s, &endp, TRUE, data, exact);
 	if (!isBlankString(endp))
 	    typeInfo->iscomplex = FALSE;
     }
 }
 
 
-/* type.convert(char, na.strings, as.is, dec) */
+/* type.convert(char, na.strings, as.is, dec, exact) */
 
 /* This is a horrible hack which is used in read.table to take a
    character variable, if possible to convert it to a logical,
@@ -548,7 +549,7 @@ SEXP typeconvert(SEXP call, SEXP op, SEXP args, SEXP env)
 {
     SEXP cvec, a, dup, levs, dims, names, dec;
     SEXP rval = R_NilValue; /* -Wall */
-    int i, j, len, asIs;
+    int i, j, len, asIs, exact;
     Rboolean done = FALSE;
     char *endp;
     const char *tmp = NULL;
@@ -574,13 +575,14 @@ SEXP typeconvert(SEXP call, SEXP op, SEXP args, SEXP env)
     if (asIs == NA_LOGICAL) asIs = 0;
 
     dec = CADDDR(args);
-
     if (isString(dec) || isNull(dec)) {
 	if (length(dec) == 0)
 	    data.decchar = '.';
 	else
 	    data.decchar = translateChar(STRING_ELT(dec, 0))[0];
     }
+
+    exact = asLogical(CAD4R(args)); // in (FALSE, TRUE, NA)
 
     cvec = CAR(args);
     len = length(cvec);
@@ -601,7 +603,7 @@ SEXP typeconvert(SEXP call, SEXP op, SEXP args, SEXP env)
 	    break;
     }
     if (i < len) {  /* not all entries are NA */
-	ruleout_types(tmp, &typeInfo, &data);
+	ruleout_types(tmp, &typeInfo, &data, exact);
     }
 
     if (typeInfo.islogical) {
@@ -618,7 +620,7 @@ SEXP typeconvert(SEXP call, SEXP op, SEXP args, SEXP env)
 		    LOGICAL(rval)[i] = 1;
 		else {
 		    typeInfo.islogical = FALSE;
-		    ruleout_types(tmp, &typeInfo, &data);
+		    ruleout_types(tmp, &typeInfo, &data, exact);
 		    break;
 		}
 	    }
@@ -637,7 +639,7 @@ SEXP typeconvert(SEXP call, SEXP op, SEXP args, SEXP env)
 		INTEGER(rval)[i] = Strtoi(tmp, 10);
 		if (INTEGER(rval)[i] == NA_INTEGER) {
 		    typeInfo.isinteger = FALSE;
-		    ruleout_types(tmp, &typeInfo, &data);
+		    ruleout_types(tmp, &typeInfo, &data, exact);
 		    break;
 		}
 	    }
@@ -653,10 +655,10 @@ SEXP typeconvert(SEXP call, SEXP op, SEXP args, SEXP env)
 		|| isNAstring(tmp, 1, &data) || isBlankString(tmp))
 		REAL(rval)[i] = NA_REAL;
 	    else {
-		REAL(rval)[i] = Strtod(tmp, &endp, FALSE, &data);
+		REAL(rval)[i] = Strtod(tmp, &endp, FALSE, &data, exact);
 		if (!isBlankString(endp)) {
 		    typeInfo.isreal = FALSE;
-		    ruleout_types(tmp, &typeInfo, &data);
+		    ruleout_types(tmp, &typeInfo, &data, exact);
 		    break;
 		}
 	    }
@@ -672,11 +674,11 @@ SEXP typeconvert(SEXP call, SEXP op, SEXP args, SEXP env)
 		|| isNAstring(tmp, 1, &data) || isBlankString(tmp))
 		COMPLEX(rval)[i].r = COMPLEX(rval)[i].i = NA_REAL;
 	    else {
-		COMPLEX(rval)[i] = strtoc(tmp, &endp, FALSE, &data);
+		COMPLEX(rval)[i] = strtoc(tmp, &endp, FALSE, &data, exact);
 		if (!isBlankString(endp)) {
 		    typeInfo.iscomplex = FALSE;
 		    /* this is not needed, unless other cases are added */
-		    ruleout_types(tmp, &typeInfo, &data);
+		    ruleout_types(tmp, &typeInfo, &data, exact);
 		    break;
 		}
 	    }
@@ -764,7 +766,7 @@ SEXP menu(SEXP choices)
     while (Rspace((int)*bufp)) bufp++;
     first = LENGTH(choices) + 1;
     if (isdigit((int)*bufp)) {
-	first = Strtod(buffer, NULL, TRUE, &data);
+	first = Strtod(buffer, NULL, TRUE, &data, /*exact*/FALSE);
     } else {
 	for (j = 0; j < LENGTH(choices); j++) {
 	    if (streql(translateChar(STRING_ELT(choices, j)), buffer)) {
@@ -848,7 +850,7 @@ SEXP readtablehead(SEXP args)
     PROTECT(ans = allocVector(STRSXP, nlines));
     for(nread = 0; nread < nlines; ) {
 	nbuf = 0; empty = TRUE; skip = FALSE; firstnonwhite = TRUE;
-	if (data.ttyflag) 
+	if (data.ttyflag)
 	    snprintf(ConsolePrompt, CONSOLE_PROMPT_SIZE, "%d: ", nread);
 	/* want to interpret comments here, not in scanchar */
 	while((c = scanchar(TRUE, &data)) != R_EOF) {
@@ -1090,7 +1092,8 @@ SEXP writetable(SEXP call, SEXP op, SEXP args, SEXP env)
 	for(int j = 0; j < nc; j++) {
 	    xj = VECTOR_ELT(x, j);
 	    if(LENGTH(xj) != nr)
-		error(_("corrupt data frame -- length of column %d does not not match nrows"), j+1);
+		error(_("corrupt data frame -- length of column %d does not not match nrows"),
+		      j+1);
 	    if(inherits(xj, "factor")) {
 		levels[j] = getAttrib(xj, R_LevelsSymbol);
 	    } else levels[j] = R_NilValue;
@@ -1115,12 +1118,13 @@ SEXP writetable(SEXP call, SEXP op, SEXP args, SEXP env)
 						 quote_col[j], qmethod,
 						 &strBuf, cdec);
 			else if(TYPEOF(xj) == REALSXP)
-			    tmp = EncodeElement2(levels[j], 
+			    tmp = EncodeElement2(levels[j],
 						 (int) (REAL(xj)[i] - 1),
 						 quote_col[j], qmethod,
 						 &strBuf, cdec);
 			else
-			    error(_("column %s claims to be a factor but does not have numeric codes"), j+1);
+			    error(_("column %s claims to be a factor but does not have numeric codes"),
+				  j+1);
 		    } else {
 			tmp = EncodeElement2(xj, i, quote_col[j], qmethod,
 					     &strBuf, cdec);
